# greetd_game_mode

./: .gitignore  Cargo.toml  README.md  config.toml  deny.toml  install.conf.example  install.sh
.github/workflows/: ci.yml  package.yml
approval/: app.py  requirements.txt
docs/: SUSPEND.md
greetd/: config.toml  config_default.toml  environments  game-mode-wrapper.sh  game-mode.service  game_mode_login.toml  greetd-config.toml  hypr.conf  hypr.lua  regreet.css  regreet.toml
greetd/hooks/: hide-extra-greeter-sessions.hook
greetd/scripts/: game-mode-discord  game-mode-overlay  game-mode-wrapper.sh  greeter-hint-sync  greeter-launcher.sh  hide-extra-sessions.sh  steamos-session-select  uwsm-start-hyprland
packaging/: PKGBUILD  build-srpm.sh  game-mode.install  game-mode.rpmlintrc  game-mode.spec
src/: approval.rs  config.rs  game_mode_switch.rs  installer.rs  lib.rs  main.rs  paths.rs  setup.rs
systemd/: access-gate-verifier.service
verifier/: Cargo.toml
verifier/src/: main.rs
