[workspace]
members = ["verifier"]

[package]
name = "game_mode"
version = "0.1.1"
edition = "2021"
authors = ["Mason Rhodes <mrhodesdev@gmail.com>"]
description = "A greetd background service for handling gamepad input"
license = "MIT"
repository = "https://github.com/MasonRhodesDev/greetd_game_mode"

[[bin]]
name = "game-mode"
path = "src/main.rs"

[[bin]]
name = "game-mode-steam-shortcut"
path = "src/bin/steam_shortcut.rs"

[[bin]]
name = "game-mode-steam-config"
path = "src/bin/steam_config.rs"

[[bin]]
name = "game-mode-watchdog"
path = "src/bin/watchdog.rs"

[dependencies]
anyhow = "1.0"
dialoguer = "0.11"
env_logger = "0.10"
gilrs = "0.10"
indicatif = "0.17"
ctrlc = "3.4"
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "time"] }
tracing-appender = "0.2"
systemd = "0.10"
toml = "0.8"
