[package]
name = "access-gate-verifier"
version = "0.1.0"
edition = "2021"
description = "WebAuthn relying party + Web Push sender gating game-mode entry"

[[bin]]
name = "access-gate-verifier"
path = "src/main.rs"

[dependencies]
anyhow = "1"
base64 = "0.22"
p256 = { version = "0.13", features = ["pem", "pkcs8"] }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tiny_http = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ureq = { version = "2", features = ["json"] }
url = "2"
uuid = { version = "1", features = ["v4"] }
web-push = { version = "0.10", default-features = false }
webauthn-rs = "0.5"
